--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -108,16 +108,16 @@ In this paper we will give a description of the springs of interest, helical com
 \section{Helical Compression Springs}
 \label{sec:Springs}
 
-Helical springs are the typical spring that comes to most peoples mind, for illustrative purposes, see figure \ref{Spring}\cite{Massad2015}. 
+Helical springs are the typical spring that comes to most peoples mind, for illustrative purposes, see figure \ref{Spring}. 
 
 		\begin{figure}[h]
 		 \begin{center}\includegraphics[scale=.2]{Spring.png}\end{center}
-		 \caption{An example of a helical compression spring.}
+		 \caption{An example of a helical compression spring, see \cite{Massad2015}}
 		 \label{Spring}
 		 
 		 \end{figure}
 
-The above spring has many design parameters. These range from physical parameters such as wire diameter, to purely empirical attributes, for example spring rate. The empirical attributes have to be assumed in a range of values. If they are not extreme values will exhibit behavior we do not wish to consider. Below is a list of a spring's key design parameters and empirical attributes. We have added a few illustrations to illustrate some of the parameters. \cite{Massad2015}		 
+The above spring has many design parameters. These range from physical parameters such as wire diameter, to purely empirical attributes. The empirical attributes have to be assumed in a range of values. If they are not extreme values will exhibit behavior we do not wish to consider. Below is a list of a spring's key design parameters and empirical attributes. We have added a few illustrations to illustrate some of the parameters. \cite{Massad2015}		 
 		\begin{figure}[h]
 			\centering
 			\begin{subfigure}{.5\textwidth}
@@ -151,8 +151,11 @@ The above spring has many design parameters. These range from physical parameter
 			
 			\item Spring's solid length $L_{solid}$, the spring's length when all coils are compressed together.
 			\item Spring's open length $L_{open}$, the spring's length at open position, for the acceleration switch this would be before the rocket sled test is initiated. 
+			
 			\item Spring's open length $L_{close}$, spring length at close position, this would be when enough force is applied for the acceleration switch to close and start collecting data.
+			
 			\item Spring's open length $L_{hard}$, the maximum a spring can compress for the application, for the acceleration switch this is the most compressed the acceleration switch should be. 
+			
 			\item Spring's open force $F_{open}$, this is the force on the spring in open position, the resting force for the acceleration switch.			
 			
 			\item Pitch $p$ illustrated in figure \ref{Description1}, depends on the wire diameter, the free length and the number of active coils.
@@ -175,25 +178,25 @@ One can see that the above parameters are physical design parameters. Each of th
 			Spring Rate:\begin{equation} k = \frac{G}{8N_{a}}\frac{d_{w}^{4}}{(d_{i} + d_{w})^{3}}\end{equation}
 			The spring rate is a quantity used to measure the rigidity or stiffness of the object. 
 				
-				 Spring Index:\begin{equation}C = \frac{d_{i}}{d_{w}} + 1.\end{equation}
+			Spring Index:\begin{equation}C = \frac{d_{i}}{d_{w}} + 1.\end{equation}
 				 The spring index gives a measurement of the inner diameter to the wire diameter. This is useful because outside of certain values the design will require more tolerance and cost also increases. \cite{SpringIndex}
 				
-				Coil Binding Gap\begin{equation} g = \frac{L_{hard} - L_{solid}(d_{w},N_{a}; ec)}{N_{t} - 1}\end{equation}
-				If the spring is allowed to go to solid compression, it is possible the spring could continue compression and cause coils to bind. Think about your favorite slinky. 
+			Coil Binding Gap\begin{equation} g = \frac{L_{hard} - L_{solid}(d_{w},N_{a}; ec)}{N_{t} - 1}\end{equation}
+				If the spring is allowed to go to solid compression, it is possible the spring could continue compression and cause coils to bind. Think about your favorite slinky. $L_{solid}$, is in terms of $d_{w}$, $N_{a}$, and end conditions (ec). Refer back to $N_{a}$ for what end conditions mean physically.
 		
 
 		
-				 Max Shear Stress\begin{equation} \frac{G(L_{free} - L_{hard})}{4 \pi N_{a} (ec)} \left[\frac{d_{w} (4d_{i}^{2} + 9.46d_{i} 
+			 Max Shear Stress\begin{equation} \frac{G(L_{free} - L_{hard})}{4 \pi N_{a} (ec)} \left[\frac{d_{w} (4d_{i}^{2} + 9.46d_{i} 
 d_{w} + 3 d_{w}^{2})}{d_{i}(d_{i}+d_{w})^{3}}\right]< UTS\end{equation}
 
-				Shear stress is a measurement of stress coplanar to the spring. 
+				Shear stress is a measurement of stress coplanar to the spring, this puts a maximum we allow. 
 		
-				Diametral Expansion\begin{equation} d_{expand} = d_{w} + \sqrt{(d_{i} + d_{w})^{2} + \frac{p^{2} - d_{w}}{\pi^{2}}}
+			Diametral Expansion\begin{equation} d_{expand} = d_{w} + \sqrt{(d_{i} + d_{w})^{2} + \frac{p^{2} - d_{w}}{\pi^{2}}}
 			\end{equation}
 			
 			This is the expansion of the diameter as compression of the spring is happening. One may notice that \begin{equation}p^{2} \ge d_{w} - \pi^{2} (d_{i} + d_{w})^{2},\end{equation} this is putting an implicit constraint on how much the spring can be extended/compressed.
 			
-			
+			\textbf{Math Model?}
 			
 			
 \section{The Problem} 
@@ -206,31 +209,32 @@ Design an algorithm that optimizes springs with interchangeable objectives and c
 A list of possible constraints/objectives given in minimization form is below, please note that \\$d_{i}^{max}, d_{o}^{max}, k_{max}, C_{max}$, and $g_{min}$ are user defined bounds. 
 
 \begin{enumerate}
-\item $d_{i} < d_{i}^{max}$, this sets a design constraint on what we will allow the inner diamter to be. For the acceleration switch, we must have a spring that will fit the housing of the switch.
-\item $d_{i} < d_{o}$, physically we must have a bigger outer diameter than inner diameter.
-\item $d_{i} + 2d_{w} < d_{o}^{max}$, The outer diameter cannot exceed some design limitation.
-\item$d_{expand} - d_{0}^{max} < 0 $, we will not allow the spring to expand more than a certain amount during compression.
-\item$ \frac{G}{8N_{a}}\frac{d_{w}^{4}}{(d_{i} + d_{w})^{3}} - k_{max} \le 0 $, there is a maximum spring rate or stiffness that we will allow. 
+	\item $d_{i} < d_{i}^{max}$, this sets a design constraint on what we will allow the inner diamter to be. For the acceleration switch, we must have a spring that will fit the housing of the switch.
+	\item $d_{i} < d_{o}$, physically we must have a bigger outer diameter than inner diameter.
+	\item $d_{i} + 2d_{w} < d_{o}^{max}$, The outer diameter cannot exceed some design limitation.
+	\item$d_{expand} - d_{0}^{max} < 0 $, we will not allow the spring to expand more than a certain amount during compression.
+	\item$ \frac{G}{8N_{a}}\frac{d_{w}^{4}}{(d_{i} + d_{w})^{3}} - k_{max} \le 0 $, there is a maximum spring rate or stiffness that we will allow. 
 
-\item $\frac{d_{i}}{d_{w}} + 1 - C_{max}< 0$, similarly we will only allow a maximum ratio between the inner diameter and wire diameter. 
+	\item $\frac{d_{i}}{d_{w}} + 1 - C_{max}< 0$, similarly we will only allow a maximum ratio between the inner diameter and wire diameter. 
 
-\item $(L_{free} - L_{open})\frac{G}{8N_{a}}\frac{d_{w}^{4}}{(d_{i} + d_{w})^{3}} - F_{open} = 0 $, $F_{open}$ should be physically possible given its formulation.
+	\item $(L_{free} - L_{open})\frac{G}{8N_{a}}\frac{d_{w}^{4}}{(d_{i} + d_{w})^{3}} - F_{open} = 0 $, $F_{open}$ should be physically possible given its formulation.
 
-\item $\frac{L_{hard} - L_{solid}}{N_{t} - 1} + g_{min} \le  0$. There is a minimum gap we wish to have to ensure our coils cannot bind. 
+	\item $\frac{L_{hard} - L_{solid}}{N_{t} - 1} + g_{min} \le  0$. There is a minimum gap we wish to have to ensure our coils cannot bind. 
 
-\item$\frac{L_{free}}{d_{i} + d_{w}} - \pi \sqrt{\frac{2(2 \nu + 1)}{\nu + 2}}$, if a spring is slender, it may buckle or fold on itself. This is a constraint to address this physical attribute. 
+	\item$\frac{L_{free}}{d_{i} + d_{w}} - \pi \sqrt{\frac{2(2 \nu + 1)}{\nu + 2}}$, if a spring is slender, it may buckle or fold on itself. This is a constraint to address this physical attribute. 
 
-\item$-UTS + \frac{G(L_{free} - L_{hard})}{4 \pi N_{a} (ec)} \left[\frac{d_{w} (4d_{i}^{2} + 9.46d_{i} 
+	\item$-UTS + \frac{G(L_{free} - L_{hard})}{4 \pi N_{a} (ec)} \left[\frac{d_{w} (4d_{i}^{2} + 9.46d_{i} 
 d_{w} + 3 d_{w}^{2})}{d_{i}(d_{i}+d_{w})^{3}}\right] < 0$
 
 We do not wish to allow the torsional stress to exceed a certain amount, $UTS$.
 
 \end{enumerate}	
 
-This list is not exhaustive as we want a user to be able to define new constraints and objectives. 
-In addition to these we should be able to minimize any parameter of the spring. The incorporation of stress relaxation and creep have been left as computational experiments. If the reader wishes to read about these please check out section \ref{sec:stress}. 
+This list is not exhaustive as we want a user to be able to define new constraints and objectives. The incorporation of stress relaxation and creep are two examples of this. If the reader wishes to read about these in detail please check out section \ref{sec:stress}. 
 
-In order to simplify the problem we have made some assumptions. First, we have assumed that constraints and objectives are all in terms of the number of total coils. This is to reduce the complexity of knowing if a constraint is dependent on the active number or total number of coils. These two numbers are dependent on the end conditions of the spring, whether it is open or closed at the end. 
+In addition to these we should be able to minimize any parameter of the spring. It may be possible they wish to minimize the wire diameter, or the length of the spring at a certain state.  
+
+In order to simplify the problem we have some assumptions. First, we have assumed that constraints and objectives are all in terms of the number of total coils. This is to reduce the complexity of knowing if a constraint is dependent on the active number or total number of coils. These two numbers are dependent on the end conditions of the spring, whether it is open or closed at the end. 
 
 For this reason we also will consider all springs to be have a closed end condition. With these assumptions we simplify our constraints for pitch, $p$, solid length, $L_{solid}$, and the diametral expansion, $d_{expand}$.
 
@@ -241,6 +245,7 @@ These assumptions have reduced the set of design parameters and have allowed us 
 \textbf{Describe data, how collected, their properties (removed noise, filled in missing data, 
 applied normalizations).}
 
+\textbf{Ipsen: Where is the mathematical model?}
 
 
 
