--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -347,7 +347,6 @@ such that
 
 % Include case 1 before submitting draft
 
-\newpage
 \subsection{Case 1:}
 \label{subsec:Case1}
 %Case_56_28910
@@ -389,11 +388,13 @@ d_{w} + 3 d_{w}^{2})}{d_{i}(d_{i}+d_{w})^{3}}\right] - UTS \leq 0$}
     \centerline{$20e-3 \leq d_{i} \leq 30e-3$}
     \centerline{$1e-3 \leq d_{w} \leq 5e-3$}
     \centerline{$9 \leq N_{t} \leq 17$}
+    
+\newpage
 	
 	\subsubsection{Feasibility}
 	
 			\begin{figure}[h!]
-		 \begin{center}\includegraphics[scale=.25]{Case_56_38910_Feasibility.eps}\end{center}
+		 \begin{center}\includegraphics[scale=.35]{Case_56_38910_Feasibility.eps}\end{center}
 		 \caption{Feasibility region for case 1.}
 		 \label{Feasibility region for case 1.}
 		 \end{figure}
@@ -487,7 +488,7 @@ d_{w} + 3 d_{w}^{2})}{d_{i}(d_{i}+d_{w})^{3}}\right] - UTS \leq 0$}
 \subsubsection{Feasibility}
 	
 			\begin{figure}[h!]
-		 \begin{center}\includegraphics[scale=.25]{Case_56_3891011_Feasibility.eps}\end{center}
+		 \begin{center}\includegraphics[scale=.35]{Case_56_3891011_Feasibility.eps}\end{center}
 		 \caption{Feasibility region for case 1.}
 		 \label{Feasibility region for case 1.}
 		 \end{figure}
@@ -527,61 +528,61 @@ $
     
 
 \newpage
-t
-\subsection{Case 3:}
-\label{subsec:Case3}
-%Case_7_348910
-	\textbf{Objectives:} Minimize force at open position.\\
-	\textbf{Constraints:} Relation on inner, wire, and outer diameter, diametral expansion, coil binding gap, buckling slenderness, and maximum shear stress. \\
-	\textbf{State Variables:} $d_{i}$, $d_{w}$, and $N_{t}$ \\
-
-\newpage
-\subsection{Case 4:}
-\label{subsec:Case4} 
-%Case_11_348
-
-	
-	\textbf{Objectives:} Maximize stress relaxation\\
-	\textbf{Constraints:} Relation on inner, wire, and outer diameter, diametral expansion, and coil binding gap. \\
-	\textbf{State Variables:} $d_{i}$, $d_{w}$, and $N_{t}$ \\
-
-
-
-		\begin{figure}[h]
-		 \begin{center}\includegraphics[scale=.75]{Case_11_348.eps}\end{center}
-		 \caption{Feasible region for case 4.}
-		 \label{Feasible Case 4}
-		 
-		 \end{figure}
- 		\textbf{Axes need to be worked on.}
-
-\newpage
-\subsection{Case 5:}
-\label{subsec:Case5}
-%Case_511_34810
-
-	\textbf{Objectives:} Minimize spring rate and maximize stress relaxation.\\
-	\textbf{Constraints:}  Relation on inner, wire, and outer diameter, diametral expansion, coil binding gap, and maximum shear stress. \\
-		\textbf{State Variables:} $d_{i}$, $d_{w}$, and $N_{t}$ \\
-		
-				\begin{figure}[h!]
-		 \begin{center}\includegraphics[scale=.50]{Case_511_34810.eps}\end{center}
-		 \caption{Feasible region for case 5}
-		 \label{Feasible Case 5}
-		 
-		 \end{figure}
-		 \textbf{Axes need to be worked on.}
-
-\newpage
-\subsection{Case 6:}
-\label{subsec:Case6}
-%Case_58_3468910
-\textbf{Saideep added a 7a, need to deal with it.}\\
-	\textbf{Objectives:} Minimize spring rate and coil binding gap.\\
-	\textbf{Constraints:} Relation on inner, wire, and outer diameter, diametral expansion, coil binding gap, buckling slenderness, and maximum shear stress. \\
-		\textbf{State Variables:}$d_{i}$, $d_{w}$, $L_{hard}$, and $N_{t}$ \\
-
-\newpage
+%
+%\subsection{Case 3:}
+%\label{subsec:Case3}
+%%Case_7_348910
+%	\textbf{Objectives:} Minimize force at open position.\\
+%	\textbf{Constraints:} Relation on inner, wire, and outer diameter, diametral expansion, coil binding gap, buckling slenderness, and maximum shear stress. \\
+%	\textbf{State Variables:} $d_{i}$, $d_{w}$, and $N_{t}$ \\
+%
+%\newpage
+%\subsection{Case 4:}
+%\label{subsec:Case4} 
+%%Case_11_348
+%
+%	
+%	\textbf{Objectives:} Maximize stress relaxation\\
+%	\textbf{Constraints:} Relation on inner, wire, and outer diameter, diametral expansion, and coil binding gap. \\
+%	\textbf{State Variables:} $d_{i}$, $d_{w}$, and $N_{t}$ \\
+%
+%
+%
+%		\begin{figure}[h]
+%		 \begin{center}\includegraphics[scale=.75]{Case_11_348.eps}\end{center}
+%		 \caption{Feasible region for case 4.}
+%		 \label{Feasible Case 4}
+%		 
+%		 \end{figure}
+% 		\textbf{Axes need to be worked on.}
+%
+%\newpage
+%\subsection{Case 5:}
+%\label{subsec:Case5}
+%%Case_511_34810
+%
+%	\textbf{Objectives:} Minimize spring rate and maximize stress relaxation.\\
+%	\textbf{Constraints:}  Relation on inner, wire, and outer diameter, diametral expansion, coil binding gap, and maximum shear stress. \\
+%		\textbf{State Variables:} $d_{i}$, $d_{w}$, and $N_{t}$ \\
+%		
+%				\begin{figure}[h!]
+%		 \begin{center}\includegraphics[scale=.50]{Case_511_34810.eps}\end{center}
+%		 \caption{Feasible region for case 5}
+%		 \label{Feasible Case 5}
+%		 
+%		 \end{figure}
+%		 \textbf{Axes need to be worked on.}
+%
+%\newpage
+%\subsection{Case 6:}
+%\label{subsec:Case6}
+%%Case_58_3468910
+%\textbf{Saideep added a 7a, need to deal with it.}\\
+%	\textbf{Objectives:} Minimize spring rate and coil binding gap.\\
+%	\textbf{Constraints:} Relation on inner, wire, and outer diameter, diametral expansion, coil binding gap, buckling slenderness, and maximum shear stress. \\
+%		\textbf{State Variables:}$d_{i}$, $d_{w}$, $L_{hard}$, and $N_{t}$ \\
+%
+%\newpage
 
 \section{Summary and Future Work}
 \label{sec:Summary}
